--- a/src/ui/select/Select.module.scss
+++ b/src/ui/select/Select.module.scss
@@ -11,7 +11,7 @@
 .arrow {
 	position: absolute;
 	top: 50%;
-	right: 6px;
+	right: 16px;
 	width: 24px;
 	margin-top: -12px;
 	transition: transform 0.2s ease-in-out, margin-top 0.2s ease-in-out;
@@ -24,7 +24,7 @@
 	box-sizing: border-box;
 	width: 100%;
 	height: 50px;
-	padding: 15px 17px;
+	padding: 15px 24px;
 	background: rgb(255 255 255);
 	outline: 1px solid #000000;
 	cursor: pointer;
@@ -60,6 +60,7 @@
 	background-color: rgb(255 255 255 / 100%);
 	border-top: none;
 	outline: 3px solid #000000;
+	overflow: hidden;
 }
 
 .option {
@@ -83,8 +84,8 @@
 
 @mixin option-color-before {
 	content: '';
-	width: 35px;
-	height: 35px;
+	width: 24px;
+	height: 24px;
 	margin-right: 10px;
 }
 
@@ -96,9 +97,9 @@
 @mixin option-color-after {
 	content: '';
 	position: absolute;
-	left: 26px;
-	width: 17px;
-	height: 17px;
+	left: 32px;
+	width: 8px;
+	height: 8px;
 	border-radius: 100%;
 }
 
