style: update component styles

--- a/src/ui/arrow-button/ArrowButton.module.scss
+++ b/src/ui/arrow-button/ArrowButton.module.scss
@@ -21,6 +21,10 @@
 	background-color: #787878;
 }
 
+.container:-moz-suppressed {
+	background-color: #d7d7d7;
+}
+
 .container_open {
 	transform: translate(616px);
 }
