--- a/src/ui/select/Select.module.scss
+++ b/src/ui/select/Select.module.scss
@@ -15,6 +15,8 @@
 	width: 24px;
 	margin-top: -12px;
 	transition: transform 0.2s ease-in-out, margin-top 0.2s ease-in-out;
+	overflow-y: auto;
+	
 }
 
 .placeholder {
